dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_2650572580.log
== SUBMISSION (2025-08-30 07:46:39)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:25:26)
-- CODE: 
  print("*****")
 print("* o o *")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:51)
-- CODE: 
print (" ***** ")
print ("(* o o *)")
print (" * ^ *")
print (" * --- *")
print ("***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:42:59)
-- CODE: 
print ( " **** " )
print (("* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:26:10)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:47:34)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:27:26)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
   print("*---*")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:44:19)
-- CODE: 
print ( " **** " )
print ("(* o o *)")
print ( " * ^ * ")
print (" * --- *")
print ("  ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:20:33)
-- CODE: 
print("*****")
print(" * o o * ")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:29:31)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:46:55)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:35:26)
-- CODE: 
print("****")
print("(* o o *)")
 print ("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:41:32)
-- CODE: 
print (" **** ")
print (("* o o *)")
print (" * ^ * ")
print ("* --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:22:41)
-- CODE: 
  print("*****")
print(" * o o * ")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:47:19)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:26:11)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:30:34)
-- CODE: 
print("*****")
print("(*o o*)")
 print("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:25:25)
-- CODE: 
  print("*****")
 print("* o o *")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:25:20)
-- CODE: 
  print("*****")
 print("* o o *")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:42:32)
-- CODE: 
print ( " **** ")
print (("* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:19:45)
-- CODE: 
print("*****")
print("* o o * ")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:39:36)
-- CODE: 
print (" **** ")
print ("* o o *")
print (" * ^ * ")
print ("* --- *")
print(" ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:26:12)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:35:29)
-- CODE: 
print("****")
print("(* o o *)")
 print ("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:46:38)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:24:03)
-- CODE: 
  print("*****")

 print("* o o *")

  print("* ^ * ")

 print("* --- *")

  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:46:49)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:40)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ("***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:35:28)
-- CODE: 
print("****")
print("(* o o *)")
 print ("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:23)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:26:51)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:26:09)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:47:44)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:47:42)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:35:38)
-- CODE: 
print  ("****")
print("(* o o *)")
 print ("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:23:45)
-- CODE: 
  print("*****")
 print("* o o *")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:48:49)
-- CODE: 
print (" ***** ")
print ("(* o o *)")
print (" * ^ *")
print (" * --- *")
print ("***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:27:46)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:34:32)
-- CODE: 
print("****\n")
print("(*o o*)\n")
 print("* ^ *\n")
  print("*---*\n")
  print("*****\n")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:48:38)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ("***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:27:47)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:47:18)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:42:33)
-- CODE: 
print ( " **** ")
print (("* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:27)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:20:32)
-- CODE: 
print("*****")
print(" * o o * ")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:48:25)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:43:57)
-- CODE: 
print ( " **** " )
print ("(* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:28:14)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:30:36)
-- CODE: 
print("*****")
print("(*o o*)")
 print("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:42:31)
-- CODE: 
print ( " **** ")
print (("* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:20:52)
-- CODE: 
print("*****")
print(" * o o * ")
print("* ^ * ")
print("* --- *")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:48:14)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:49:34)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ("  * ^ *")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:23:47)
-- CODE: 
  print("*****")
 print("* o o *")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:16)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:41:04)
-- CODE: 
print (" **** ")
print (("* o o *)")
print (" * ^ * ")
print ("* --- *")
print(" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:22:40)
-- CODE: 
  print("*****")
print(" * o o * ")
  print("* ^ * ")
 print("* --- *")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:27:25)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
   print("*---*")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:46:23)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:41:33)
-- CODE: 
print (" **** ")
print (("* o o *)")
print (" * ^ * ")
print ("* --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:20:54)
-- CODE: 
print("*****")
print(" * o o * ")
print("* ^ * ")
print("* --- *")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:42:58)
-- CODE: 
print ( " **** " )
print (("* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:28:16)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:43:57)
-- CODE: 
print ( " **** " )
print ("(* o o *)")
print ( " * ^ * ")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:21:38)
-- CODE: 
  print("*****")
print(" * o o * ")
  print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:19:43)
-- CODE: 
print("*****")
print("* o o * ")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:48:58)
-- CODE: 
print (" ***** ")
print ("(* o o *)")
print (" * ^ *")
print (" * --- *")
print ("***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:46:22)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:21:40)
-- CODE: 
  print("*****")
print(" * o o * ")
  print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:27:40)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:34:33)
-- CODE: 
print("****\n")
print("(*o o*)\n")
 print("* ^ *\n")
  print("*---*\n")
  print("*****\n")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:47:39)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:49:35)
-- CODE: 
print ( " ***** ")
print ("(* o o *)")
print ("  * ^ *")
print (" * --- *")
print (" ***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:19:49)
-- CODE: 
print("*****")
print("* o o * ")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:35:37)
-- CODE: 
print  ("****")
print("(* o o *)")
 print ("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print ("* ^ *")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 07:46:46)
-- CODE: 
print ( " **** ")
print ("(* o o *)")
print ( " * ^ *")
print (" * --- *")
print ( "***** ")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:27:44)
-- CODE: 
print("*****")
print("(* o o *)")
print("* ^ * ")
print("*---*")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:30:38)
-- CODE: 
print("*****")
print("(*o o*)")
 print("* ^ *")
  print("*---*")
  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:21:43)
-- CODE: 
  print("*****")
print(" * o o * ")
  print("* ^ * ")
  print("* --- *")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:24:02)
-- CODE: 
  print("*****")

 print("* o o *")

  print("* ^ * ")

 print("* --- *")

  print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:27:28)
-- CODE: 
   print("*****")
 print("(* o o *)")
   print("* ^ * ")
   print("*---*")
   print("*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 1
    print("*****")
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 06:34:30)
-- CODE: 
print("****\n")
print("(*o o*)\n")
 print("* ^ *\n")
  print("*---*\n")
  print("*****\n")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print("* ^ *\n")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:39:35)
-- CODE: 
print (" **** ")
print ("* o o *")
print (" * ^ * ")
print ("* --- *")
print(" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 06:20:55)
-- CODE: 
print("*****")
print(" * o o * ")
print("* ^ * ")
print("* --- *")
print("*****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:41:03)
-- CODE: 
print (" **** ")
print (("* o o *)")
print (" * ^ * ")
print ("* --- *")
print(" ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print (("* o o *)")
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 07:44:18)
-- CODE: 
print ( " **** " )
print ("(* o o *)")
print ( " * ^ * ")
print (" * --- *")
print ("  ***** ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
